# Nerd-Media

./: .env.example  .gitignore  1.py  README.md  docker-compose.yaml  requirements.txt
app/: db.py  main-new.py  main.py  recommender.py
app/Legacy/: main-20251010.py  main.py
libs/retrieval/: pyproject.toml
playground/Other/: pg10.py  pg11.py  pg12.py  pg13.py  pg9.py  playground-1.py  playground-2.py  playground-3.py  playground-4.py  playground-5.py  playground-6.py  playground-7.py  playground-8.py
playground/PG1/: pg-app.py  pg-dashboard.py  pg-home.py  pg-recommendations.py
playground/PG2/: commands.txt  custom_types.py  data_loader.py  main.py  pyproject.toml  vector_db.py
playground/PG2/qdrant_storage/: raft_state.json
playground/PG3/: pg-app.py  pg1.py
playground/PG4-LocalAIAgent/: Commands.txt  main.py  vector.py
playground/PG5-API-LLM/: commands.txt  main.py  test-api.py
services/agent-service/: pyproject.toml
services/business-rules/: pyproject.toml
services/nerdial-cli/: pyproject.toml
services/nerdial-cli/nerdial_cli/: cli.py  crud.py
services/recommendation-api/: pyproject.toml  simple_API-1.py  simple_API-2.py  simple_API_3.py  simple_API_4.py  simple_API_5.py
steam-data/src/steam/: config.py  fetch_app_list.py  fetch_data_test.py  stage_1_ingestion.py  utils.py
