[project]
name = "nerdial-cli"
version = "0.1.0"
description = "CLI tool for nerdial"
authors = [
    {name = "Fontiegow",email = "businessboyfarid@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click (>=8.3.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nerdial = "nerdial_cli.cli:main"